--- a/assets/_sass/minima/_base.scss
+++ b/assets/_sass/minima/_base.scss
@@ -23,6 +23,9 @@ body {
        -o-font-feature-settings: "kern" 1;
           font-feature-settings: "kern" 1;
   font-kerning: normal;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
 
@@ -37,6 +40,12 @@ ul, ol, dl, figure,
   margin-bottom: $spacing-unit / 2;
 }
 
+/**
+* `main` element
+*/
+main{
+  display: block;
+}
 
 
 /**
