--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
       </div>
 
       <div class="footer-col footer-col-2">
-        {%- include social.html -%}
+        {%- include _components/social.html -%}
       </div>
 
       <div class="footer-col footer-col-3">
