--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,6 @@
   <link rel="stylesheet" href="{{ "/assets/css/app.css" | relative_url }}">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
-    {%- include google-analytics.html -%}
+    {%- include _tools/google-analytics.html -%}
   {%- endif -%}
 </head>
