--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,12 +8,10 @@
     {%- include header.html -%}
 
     <main class="page-content" aria-label="Content">
-      <div class="wrapper">
         {{ content }}
-      </div>
     </main>
 
-    {%- include footer.html -%}
+    {%- comment -%} {%- include footer.html -%} {%- endcomment -%}
 
   </body>
 
