--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-73302edb-91d9-4cc9-b087-42190cf95f42"></div>
+
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
@@ -17,6 +20,7 @@ layout: default
 
   <div class="post-content e-content" itemprop="articleBody">
     {{ content }}
+
   </div>
 
   {%- if site.disqus.shortname -%}
