--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,12 @@
     {%- include header.html -%}
 
     <main class="page-content" aria-label="Content">
+      <div class="wrapper">
         {{ content }}
+      </div>
     </main>
 
-    {%- comment -%} {%- include footer.html -%} {%- endcomment -%}
+    {%- include footer.html -%}
 
   </body>
 
