--- a/assets/_sass/minima/_base.scss
+++ b/assets/_sass/minima/_base.scss
@@ -1,31 +1,14 @@
 /**
  * Reset some basic elements
  */
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-hr,
-dl,
-dd,
-ol,
-ul,
-figure {
+body, h1, h2, h3, h4, h5, h6,
+p, blockquote, pre, hr,
+dl, dd, ol, ul, figure {
   margin: 0;
   padding: 0;
 }
 
-.page-content #eapps-google-maps-1 {
-  a {
-    display: none !important;
-  }
-}
+
 
 /**
  * Basic styling
@@ -36,31 +19,23 @@ body {
   background-color: $background-color;
   -webkit-text-size-adjust: 100%;
   -webkit-font-feature-settings: "kern" 1;
-  -moz-font-feature-settings: "kern" 1;
-  -o-font-feature-settings: "kern" 1;
-  font-feature-settings: "kern" 1;
+     -moz-font-feature-settings: "kern" 1;
+       -o-font-feature-settings: "kern" 1;
+          font-feature-settings: "kern" 1;
   font-kerning: normal;
   display: flex;
   min-height: 100vh;
   flex-direction: column;
 }
 
+
+
 /**
  * Set `margin-bottom` to maintain vertical rhythm
  */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-ul,
-ol,
-dl,
-figure,
+h1, h2, h3, h4, h5, h6,
+p, blockquote, pre,
+ul, ol, dl, figure,
 %vertical-rhythm {
   margin-bottom: $spacing-unit / 2;
 }
@@ -68,9 +43,10 @@ figure,
 /**
 * `main` element
 */
-main {
+main{
   display: block;
 }
+
 
 /**
  * Images
@@ -79,6 +55,8 @@ img {
   max-width: 100%;
   vertical-align: middle;
 }
+
+
 
 /**
  * Figures
@@ -91,11 +69,12 @@ figcaption {
   font-size: $small-font-size;
 }
 
+
+
 /**
  * Lists
  */
-ul,
-ol {
+ul, ol {
   margin-left: $spacing-unit;
 }
 
@@ -106,17 +85,16 @@ li {
   }
 }
 
+
+
 /**
  * Headings
  */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
   font-weight: $base-font-weight;
 }
+
+
 
 /**
  * Links
@@ -143,6 +121,7 @@ a {
   }
 }
 
+
 /**
  * Blockquotes
  */
@@ -158,6 +137,8 @@ blockquote {
     margin-bottom: 0;
   }
 }
+
+
 
 /**
  * Code formatting
@@ -185,12 +166,14 @@ pre {
   }
 }
 
+
+
 /**
  * Wrapper
  */
 .wrapper {
   max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-  max-width: calc(#{$content-width} - (#{$spacing-unit} * 2));
+  max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
   margin-right: auto;
   margin-left: auto;
   padding-right: $spacing-unit;
@@ -199,11 +182,13 @@ pre {
 
   @include media-query($on-laptop) {
     max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
-    max-width: calc(#{$content-width} - (#{$spacing-unit}));
+    max-width:         calc(#{$content-width} - (#{$spacing-unit}));
     padding-right: $spacing-unit / 2;
     padding-left: $spacing-unit / 2;
   }
 }
+
+
 
 /**
  * Clearfix
@@ -214,17 +199,19 @@ pre {
   clear: both;
 }
 
+
+
 /**
  * Icons
  */
 
 .svg-icon {
-  width: 16px;
-  height: 16px;
-  display: inline-block;
-  fill: #{$grey-color};
-  padding-right: 5px;
-  vertical-align: text-top;
+    width: 16px;
+    height: 16px;
+    display: inline-block;
+    fill: #{$grey-color};
+    padding-right: 5px;
+    vertical-align: text-top;
 }
 
 .social-media-list {
@@ -232,6 +219,8 @@ pre {
     padding-top: 5px;
   }
 }
+
+
 
 /**
  * Tables
@@ -248,8 +237,7 @@ table {
       background-color: lighten($grey-color-light, 6%);
     }
   }
-  th,
-  td {
+  th, td {
     padding: ($spacing-unit / 3) ($spacing-unit / 2);
   }
   th {
