--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="{{ "/assets/css/app.css" | relative_url }}">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   {%- feed_meta -%}
-  {%- if jekyll.environment == 'production' and site.google_analytics -%}
+  {%- if jekyll.environment == 'production' and site.gaCode -%}
     {%- include _tools/google-analytics.html -%}
   {%- endif -%}
 </head>
