--- a/assets/_sass/_minima.scss
+++ b/assets/_sass/_minima.scss
@@ -11,8 +11,8 @@ $base-line-height: 1.5 !default;
 $spacing-unit:     30px !default;
 
 $text-color:       #111 !default;
-$background-color: #fdfdfd !default;
-$brand-color:      #2a7ae2 !default;
+$background-color: #BADA55 !default;
+$brand-color:      #C00C00 !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
@@ -49,3 +49,6 @@ $on-laptop:        800px !default;
   "minima/layout",
   "minima/syntax-highlighting"
 ;
+.test{
+  transition: all .5s;
+}
