--- a/assets/_sass/_minima.scss
+++ b/assets/_sass/_minima.scss
@@ -1,5 +1,9 @@
 @charset "utf-8";
 
+:root {
+  --brandColor: #5755d9;
+  --textColor: #111;
+}
 // Define defaults for each variable.
 
 $base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
@@ -13,7 +17,7 @@ $spacing-unit: 30px !default;
 
 $text-color: #111 !default;
 $background-color: #fdfdfd !default;
-$brand-color: #c00c00 !default;
+$brand-color: #5755d9 !default;
 
 $grey-color: #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
