setting up  the base of cockpit css

--- a/assets/_sass/_settings.scss
+++ b/assets/_sass/_settings.scss
@@ -49,7 +49,4 @@ $on-laptop: 800px !default;
 }
 
 // Import partials.
-@import "minima/base", "minima/layout", "minima/syntax-highlighting";
-.test {
-  transition: all .5s;
-}
+@import "cockpit/components/base", "cockpit/components/layout", "cockpit/helpers/syntax-highlighting", "cockpit/shame";
