--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="{{ "/assets/css/vendors/bootstrap.css" | relative_url }}" type="text/css">
   <link rel="stylesheet" href="{{ "/assets/css/app.css" | relative_url }}">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
