--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,9 +2,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  {%- seo -%}
+  <meta name="author" content="{{site.owner | append: "&trade;"}}">
+  <meta name="description" content="{{ site.description }}">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
   <link rel="stylesheet" href="{{ "/assets/css/vendors/bootstrap.css" | relative_url }}" type="text/css">
   <link rel="stylesheet" href="{{ "/assets/css/app.css" | relative_url }}">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <title>{{site.title | append: " powered by epluno" | default: 'epluno'}}</title>
 </head>
