--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,7 @@
   <link rel="stylesheet" href="{{ "/assets/css/app.css" | relative_url }}">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>{{site.title | append: " powered by epluno" | default: 'epluno'}}</title>
+  <style>
+    body{background-color: hsl(101, 0%, 95%);}
+  </style>
 </head>
