reverting back to release v9.3 made a mistake and was commiting project changes to the flightdeck - sorry `¯\_(ツ)_/¯`

--- a/assets/_sass/_minima.scss
+++ b/assets/_sass/_minima.scss
@@ -49,4 +49,7 @@ $on-laptop: 800px !default;
 }
 
 // Import partials.
-@import "cockpit/components/base", "cockpit/components/layout", "cockpit/helpers/syntax-highlighting", "cockpit/shame";
+@import "minima/base", "minima/layout", "minima/syntax-highlighting";
+.test {
+  transition: all .5s;
+}
