--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,14 +2,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="author" content="{{site.owner | append: "&trade;"}}">
-  <meta name="description" content="{{ site.description }}">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="{{ "/assets/css/vendors/bootstrap.css" | relative_url }}" type="text/css">
+  {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/css/app.css" | relative_url }}">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <title>{{site.title | append: " powered by epluno" | default: 'epluno'}}</title>
-  <style>
-    body{background-color: hsl(101, 0%, 95%);}
-  </style>
+  {%- feed_meta -%}
+  {%- if jekyll.environment == 'production' and site.gaCode -%}
+    {%- include _tools/google-analytics.html -%}
+  {%- endif -%}
 </head>
