--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,14 +7,13 @@
 
     {%- include header.html -%}
 
-    <main class="page-wrapper">
-      <div class="content-wrapper">
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
         {{ content }}
       </div>
-
-      {%- include footer.html -%}
     </main>
 
+    {%- include footer.html -%}
 
   </body>
 
