adds svg include

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
         <input class="nav-trigger" id="nav-trigger" type="checkbox"/>
         <label for="nav-trigger">
           <span class="menu-icon">
-            {% include '_components/svg.html' %}
+            {% include _components/svg.html %}
           </span>
         </label>
 
