adds npm scripts to run parcel with jekyll & browsersync
- adds keep_files to jekyll config
- adds output directories for asset compiling (sass/js)
- updates vscode workspace settings
- fixes sytax for liquid
- adds flightdeck info under about
- adds post about jekyll + parcel
- updates original welcome post with original info
- updates minima file with different `$brand-color`

--- a/assets/css/_minima.scss
+++ b/assets/css/_minima.scss
@@ -1,13 +1,9 @@
 @charset "utf-8";
 
-:root {
-  --brandColor: #5755d9;
-  --textColor: #111;
-}
 // Define defaults for each variable.
 
-$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
-  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$base-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
+  sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' !default;
 $base-font-size: 16px !default;
 $base-font-weight: 400 !default;
 $small-font-size: $base-font-size * 0.875 !default;
@@ -17,7 +13,7 @@ $spacing-unit: 30px !default;
 
 $text-color: #111 !default;
 $background-color: #fdfdfd !default;
-$brand-color: #5755d9 !default;
+$brand-color: #0060ff !default;
 
 $grey-color: #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
@@ -38,6 +34,7 @@ $on-laptop: 800px !default;
 //     padding-left: $spacing-unit / 2;
 //   }
 // }
+
 @mixin media-query($device) {
   @media screen and (max-width: $device) {
     @content;
@@ -49,7 +46,8 @@ $on-laptop: 800px !default;
 }
 
 // Import partials.
-@import "minima/base", "minima/layout", "minima/syntax-highlighting";
+@import 'minima/base', 'minima/layout', 'minima/syntax-highlighting';
+
 .test {
-  transition: all .5s;
+  transition: all 0.5s;
 }
