--- a/assets/scss/_minima.scss
+++ b/assets/scss/_minima.scss
@@ -1,13 +1,9 @@
 @charset "utf-8";
 
-:root {
-  --brandColor: #5755d9;
-  --textColor: #111;
-}
 // Define defaults for each variable.
 
-$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
-  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$base-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
+  sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' !default;
 $base-font-size: 16px !default;
 $base-font-weight: 400 !default;
 $small-font-size: $base-font-size * 0.875 !default;
@@ -49,7 +45,7 @@ $on-laptop: 800px !default;
 }
 
 // Import partials.
-@import "minima/base", "minima/layout", "minima/syntax-highlighting";
+@import 'minima/base', 'minima/layout', 'minima/syntax-highlighting';
 .test {
-  transition: all .5s;
+  transition: all 0.5s;
 }
