--- a/assets/scss/minima/_base.scss
+++ b/assets/scss/minima/_base.scss
@@ -29,10 +29,10 @@ body {
   color: $text-color;
   background-color: $background-color;
   -webkit-text-size-adjust: 100%;
-  -webkit-font-feature-settings: "kern" 1;
-  -moz-font-feature-settings: "kern" 1;
-  -o-font-feature-settings: "kern" 1;
-  font-feature-settings: "kern" 1;
+  -webkit-font-feature-settings: 'kern' 1;
+  -moz-font-feature-settings: 'kern' 1;
+  -o-font-feature-settings: 'kern' 1;
+  font-feature-settings: 'kern' 1;
   font-kerning: normal;
   display: flex;
   min-height: 100vh;
@@ -118,7 +118,7 @@ h6 {
 a {
   color: $brand-color;
   text-decoration: none;
-  transition: all .15s ease-in-out;
+  transition: all 0.15s ease-in-out;
 
   &:visited {
     color: darken($brand-color, 15%);
@@ -203,7 +203,7 @@ pre {
  * Clearfix
  */
 %clearfix:after {
-  content: "";
+  content: '';
   display: table;
   clear: both;
 }
