banner and package.json update

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <!--
-* Flightdeck - {{ site.description }}
+* Flightdeck - {{ site.data.package.description }}
 * @version {{ site.data.package.version }}
-* @link {{ site.flightdeck.homepage }}
+* @link {{ site.data.package.homepage }}
 * Copyright 2017-{{ 'now' | date: "%Y" }} The Flightdeck Authors
 * Licensed under MIT (https://github.com/flight-deck/flightdeck-jekyll/blob/master/LICENSE)
 -->
