--- a/_includes/_components/social.html
+++ b/_includes/_components/social.html
@@ -1,75 +1,75 @@
 <ul class="social-media-list">
-  {%- if site.dribbble_username -%}
+  {%- if site.social.dribble-%}
     <li>
-      <a href="https://dribbble.com/{{ site.dribbble_username| cgi_escape | escape }}">
+      <a href="https://dribbble.com/{{ site.social.dribbble| cgi_escape | escape }}">
         <svg class="svg-icon">
           <use xlink:href="{{ '/assets/images/minima-social-icons.svg#dribbble' | relative_url }}"></use>
         </svg>
-        <span class="username">{{ site.dribbble_username| escape }}</span>
+        <span class="username">{{ site.social.dribbble| escape }}</span>
       </a>
     </li>
   {%- endif -%}
-  {%- if site.facebook_username -%}
+  {%- if site.social.facebook -%}
     <li>
-      <a href="https://www.facebook.com/{{ site.facebook_username| cgi_escape | escape }}">
+      <a href="https://www.facebook.com/{{ site.social.facebook| cgi_escape | escape }}">
         <svg class="svg-icon">
           <use xlink:href="{{ '/assets/images/minima-social-icons.svg#facebook' | relative_url }}"></use>
         </svg>
-        <span class="username">{{ site.facebook_username| escape }}</span>
+        <span class="username">{{ site.social.facebook| escape }}</span>
       </a>
     </li>
   {%- endif -%}
-  {%- if site.flickr_username -%}
+  {%- if site.social.flickr -%}
     <li>
-      <a href="https://www.flickr.com/photos/{{ site.flickr_username| cgi_escape | escape }}">
+      <a href="https://www.flickr.com/photos/{{ site.social.flickr| cgi_escape | escape }}">
         <svg class="svg-icon">
           <use xlink:href="{{ '/assets/images/minima-social-icons.svg#flickr' | relative_url }}"></use>
         </svg>
-        <span class="username">{{ site.flickr_username| escape }}</span>
+        <span class="username">{{ site.social.flickr| escape }}</span>
       </a>
     </li>
   {%- endif -%}
-  {%- if site.github_username -%}
+  {%- if site.social.github -%}
     <li>
-      <a href="https://github.com/{{ site.github_username| cgi_escape | escape }}">
+      <a href="https://github.com/{{ site.social.github| cgi_escape | escape }}">
         <svg class="svg-icon">
           <use xlink:href="{{ '/assets/images/minima-social-icons.svg#github' | relative_url }}"></use>
         </svg>
-        <span class="username">{{ site.github_username| escape }}</span>
+        <span class="username">{{ site.social.github| escape }}</span>
       </a>
     </li>
   {%- endif -%}
-  {%- if site.instagram_username -%}
+  {%- if site.instagram.user-%}
     <li>
-      <a href="https://instagram.com/{{ site.instagram_username| cgi_escape | escape }}">
+      <a href="https://instagram.com/{{ site.instagram| cgi_escape | escape }}">
         <svg class="svg-icon">
           <use xlink:href="{{ '/assets/images/minima-social-icons.svg#instagram' | relative_url }}"></use>
         </svg>
-        <span class="username">{{ site.instagram_username| escape }}</span>
+        <span class="username">{{ site.social.instagram| escape }}</span>
       </a>
     </li>
   {%- endif -%}
-  {%- if site.linkedin_username -%}
+  {%- if site.social.linkedin -%}
     <li>
-      <a href="https://www.linkedin.com/in/{{ site.linkedin_username| cgi_escape | escape }}">
+      <a href="https://www.linkedin.com/in/{{ site.social.linkedin| cgi_escape | escape }}">
         <svg class="svg-icon">
           <use xlink:href="{{ '/assets/images/minima-social-icons.svg#linkedin' | relative_url }}"></use>
         </svg>
-        <span class="username">{{ site.linkedin_username| escape }}</span>
+        <span class="username">{{ site.social.linkedin| escape }}</span>
       </a>
     </li>
   {%- endif -%}
-  {%- if site.pinterest_username -%}
+  {%- if site.social.pinterest -%}
     <li>
-      <a href="https://www.pinterest.com/{{ site.pinterest_username| cgi_escape | escape }}">
+      <a href="https://www.pinterest.com/{{ site.social.pinterest| cgi_escape | escape }}">
         <svg class="svg-icon">
           <use xlink:href="{{ '/assets/images/minima-social-icons.svg#pinterest' | relative_url }}"></use>
         </svg>
-        <span class="username">{{ site.pinterest_username| escape }}</span>
+        <span class="username">{{ site.social.pinterest| escape }}</span>
       </a>
     </li>
   {%- endif -%}
-  {%- for mst in site.mastodon -%}
+  {%- for mst in site.social.mastodon -%}
     {%- if mst.username and mst.instance -%}
       <li>
         <a href="https://{{ mst.instance| cgi_escape | escape}}/@{{mst.username}}">
@@ -81,33 +81,33 @@
       </li>
     {%- endif -%}
   {%- endfor -%}
-  {%- if site.twitter_username -%}
+  {%- if site.social.twitter -%}
     <li>
-      <a href="https://www.twitter.com/{{ site.twitter_username| cgi_escape | escape }}">
+      <a href="https://www.twitter.com/{{ site.social.twitter| cgi_escape | escape }}">
         <svg class="svg-icon">
           <use xlink:href="{{ '/assets/images/minima-social-icons.svg#twitter' | relative_url }}"></use>
         </svg>
-        <span class="username">{{ site.twitter_username| escape }}</span>
+        <span class="username">{{ site.social.twitter| escape }}</span>
       </a>
     </li>
   {%- endif -%}
-  {%- if site.youtube_username -%}
+  {%- if site.social.youtube -%}
     <li>
-      <a href="https://youtube.com/{{ site.youtube_username| cgi_escape | escape }}">
+      <a href="https://youtube.com/{{ site.social.youtube| cgi_escape | escape }}">
         <svg class="svg-icon">
           <use xlink:href="{{ '/assets/images/minima-social-icons.svg#youtube' | relative_url }}"></use>
         </svg>
-        <span class="username">{{ site.youtube_username| escape }}</span>
+        <span class="username">{{ site.social.youtube| escape }}</span>
       </a>
     </li>
   {%- endif -%}
-  {%- if site.googleplus_username -%}
+  {%- if site.social.googleplus -%}
     <li>
-      <a href="https://plus.google.com/{{ site.googleplus_username| escape }}">
+      <a href="https://plus.google.com/{{ site.social.googleplus| escape }}">
         <svg class="svg-icon">
           <use xlink:href="{{ '/assets/images/minima-social-icons.svg#googleplus' | relative_url }}"></use>
         </svg>
-        <span class="username">{{ site.googleplus_username| escape }}</span>
+        <span class="username">{{ site.social.googleplus| escape }}</span>
       </a>
     </li>
   {%- endif -%}
