--- a/assets/_sass/_minima.scss
+++ b/assets/_sass/_minima.scss
@@ -2,8 +2,16 @@
 
 // Define defaults for each variable.
 
-$base-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
-  sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' !default;
+$base-font-family: -apple-system,
+BlinkMacSystemFont,
+'Segoe UI',
+Roboto,
+Helvetica,
+Arial,
+sans-serif,
+'Apple Color Emoji',
+'Segoe UI Emoji',
+'Segoe UI Symbol' !default;
 $base-font-size: 16px !default;
 $base-font-weight: 400 !default;
 $small-font-size: $base-font-size * 0.875 !default;
@@ -30,8 +38,8 @@ $on-laptop: 800px !default;
 // Use media queries like this:
 // @include media-query($on-palm) {
 //   .wrapper {
-//     padding-right: $spacing-unit / 2;
-//     padding-left: $spacing-unit / 2;
+//     padding-right:calc($spacing-unit / 2);
+//     padding-left:calc($spacing-unit / 2);
 //   }
 // }
 @mixin media-query($device) {
@@ -46,6 +54,7 @@ $on-laptop: 800px !default;
 
 // Import partials.
 @import 'minima/base', 'minima/layout', 'minima/syntax-highlighting';
+
 .test {
   transition: all 0.5s;
 }
