--- a/assets/css/_minima.scss
+++ b/assets/css/_minima.scss
@@ -13,7 +13,7 @@ $spacing-unit: 30px !default;
 
 $text-color: #111 !default;
 $background-color: #fdfdfd !default;
-$brand-color: #0060ff !default;
+$brand-color: #E50A69 !default;
 
 $grey-color: #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
@@ -30,8 +30,8 @@ $on-laptop: 800px !default;
 // Use media queries like this:
 // @include media-query($on-palm) {
 //   .wrapper {
-//     padding-right: $spacing-unit / 2;
-//     padding-left: $spacing-unit / 2;
+//     padding-right: calc($spacing-unit / 2);
+//     padding-left: calc($spacing-unit / 2);
 //   }
 // }
 
