styles directory updated - /css/ is now /styles/

--- a/assets/styles/_minima.scss
+++ b/assets/styles/_minima.scss
@@ -13,7 +13,7 @@ $spacing-unit: 30px !default;
 
 $text-color: #111 !default;
 $background-color: #fdfdfd !default;
-$brand-color: #E50A69 !default;
+$brand-color: #c00c00 !default;
 
 $grey-color: #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
