--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,4 +34,4 @@
 
 </footer>
 
-<script src="{{ "/assets/js/bundle.js" | relative_url }}" type="text/javascript"></script>
+<script src="{{ "/assets/js/app.js" | relative_url }}" type="text/javascript"></script>
