--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,9 +2,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="testing hot reloading">
   {%- seo -%}
-  <link rel="stylesheet" href="{{"/assets/css/app.css" | relative_url}}">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="{{"/assets/styles/style.css" | relative_url}}">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.gaCode -%}
     {%- include _tools/google-analytics.html -%}
