--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 ---
-
 <div class="home test">
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
+
   {%- endif -%}
   {{ content }}
 
   {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
+    <h2 class="post-list-heading">{{ page.list_title | default: "Latest Posts" }}</h2>
     <ul class="post-list">
       {%- for post in site.posts -%}
       <li>
