--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,5 @@
   {%- if jekyll.environment == 'production' and site.gaCode -%}
     {%- include _tools/google-analytics.html -%}
   {%- endif -%}
+  <script src="{{ "/assets/js/app.js" | relative_url }}" type="module"></script>
 </head>
