--- a/_flightdeck/styles/_minima.scss
+++ b/_flightdeck/styles/_minima.scss
@@ -12,8 +12,8 @@ $base-line-height: 1.5 !default;
 $spacing-unit: 30px !default;
 
 $text-color: #111 !default;
-$background-color: #fdfdfd !default;
-$brand-color: #c00c00 !default;
+$background-color: blanchedalmond !default;
+$brand-color: goldenrod !default;
 
 $grey-color: #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
